cabal-version:       >= 1.10 
name:                CInterpederper
version:             0.1.0.0
build-type:          Simple

executable Main
  main-is: Main.hs
  hs-source-dirs: src
  build-tools:
  other-modules: ParserCombinators.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && <5,
      containers,
      filepath
  default-language: Haskell2010
